--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-FR" dir="ltr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Récap stats JDR</title>
+  <title>Dices Tracker</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="/images/dice-icon.jpg" type="image/jpg">
 </head>
