Mise à jour responsive pour mobile

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <h1 class="home-title">Les stats des campagnes de JDR</h1>
 
-  <a href="/pages/aria.html">
+  <a href="/pages/aria.html" class="link-card">
     <h2 class="aria-icon card">Aria</h2>
   </a>
 
-  <a href="/pages/poudlard.html">
+  <a href="/pages/poudlard.html" class="link-card">
     <h2 class="hogwards-icon card">Poudlard</h2>
   </a>
 
