Création de la page Pathfinder en prévision du JDR

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h2 class="hogwards-icon card">Poudlard</h2>
   </a>
 
+  <a href="/pages/pathfinder.html" class="link-card">
+    <h2 class="pathfinder-icon card">Pathfinder</h2>
+  </a>
+
   <script src="/program/app.js" type="module"></script>
 </body>
 </html>
