Finalisation style pathfinder

--- a/pages/pathfinder.html
+++ b/pages/pathfinder.html
@@ -14,7 +14,7 @@
     <!--Génération de la liste des personnages-->
   </section>
 
-  <section class="stats-section" id="pathfinder-stats-section">
+  <section class="stats-section pathfinder-section" id="pathfinder-stats-section">
     <!-- Génération des parties -->
   </section>
 
