Mise à jour style des pages détail pour le scrolling/Ajout des données des parties précédentes pour mes dés

--- a/pages/pathfinder.html
+++ b/pages/pathfinder.html
@@ -8,15 +8,16 @@
   <link rel="shortcut icon" href="/images/dice-icon.jpg" type="image/jpg">
 </head>
 <body id="pathfinder-page">
-  <h1 class="pathfinder-icon title">Pathfinder</h1>
+  <header class="page-header">
+    <h1 class="pathfinder-icon title">Pathfinder</h1>
+    <section class="pj-recap" id="pathfinder-recap-section">
+      <!--Génération de la liste des personnages-->
+    </section>
+  </header>
 
-  <section class="pj-recap" id="pathfinder-recap-section">
-    <!--Génération de la liste des personnages-->
-  </section>
-
-  <section class="stats-section" id="pathfinder-stats-section">
+  <main class="stats-section" id="pathfinder-stats-section">
     <!-- Génération des parties -->
-  </section>
+  </main>
 
   <script src="/program/app.js" type="module"></script>
 </body>
