--- a/pages/poudlard.html
+++ b/pages/poudlard.html
@@ -8,15 +8,16 @@
   <link rel="shortcut icon" href="/images/dice-icon.jpg" type="image/jpg">
 </head>
 <body id="hogwards-page">
-  <h1 class="hogwards-icon title">Poudlard</h1>
+  <header class="page-header">
+    <h1 class="hogwards-icon title">Poudlard</h1>
+    <section class="pj-recap" id="hogwards-recap-section">
+      <!--Génération de la liste des personnages-->
+    </section>
+  </header>
 
-  <section class="pj-recap" id="hogwards-recap-section">
-    <!--Génération de la liste des personnages-->
-  </section>
-
-  <section class="stats-section" id="hogwards-stats-section">
+  <main class="stats-section" id="hogwards-stats-section">
     <!-- Génération des parties -->
-  </section>
+  </main>
 
   <script src="/program/app.js" type="module"></script>
 </body>
