Ajout de nouvelles données pour récap global

--- a/pages/pathfinder.html
+++ b/pages/pathfinder.html
@@ -15,9 +15,12 @@
     </section>
   </header>
 
-  <main class="stats-section" id="pathfinder-stats-section">
-    <!-- Génération des parties -->
-  </main>
+  <div class="main-body-page">
+    <h2 id="nb-games">Nombre de parties : </h2>
+    <main class="stats-section" id="pathfinder-stats-section">
+      <!-- Génération des parties -->
+    </main>
+  </div>
 
   <script src="/program/app.js" type="module"></script>
 </body>
