--- a/pages/poudlard.html
+++ b/pages/poudlard.html
@@ -15,8 +15,11 @@
     </section>
   </header>
 
-  <main class="stats-section" id="hogwards-stats-section">
-    <!-- Génération des parties -->
+  <main class="main-body-page">
+    <h2 id="nb-games">Nombre de parties : </h2>
+    <div class="stats-section" id="hogwards-stats-section">
+      <!-- Génération des parties -->
+    </div>
   </main>
 
   <script src="/program/app.js" type="module"></script>
