--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="/images/dice-icon.jpg" type="image/jpg">
 </head>
-<body>
+<body id="app">
   <h1 class="home-title">Les stats des campagnes de JDR</h1>
 
-  <a href="/pages/aria.html" class="link-card">
-    <h2 class="aria-icon card">Aria</h2>
-  </a>
-
-  <a href="/pages/poudlard.html" class="link-card">
-    <h2 class="hogwards-icon card">Poudlard</h2>
-  </a>
-
-  <a href="/pages/pathfinder.html" class="link-card">
-    <h2 class="pathfinder-icon card">Pathfinder</h2>
-  </a>
+  <nav id="nav">
+    <a href="/pages/aria.html" class="link-card">
+      <h2 class="aria-icon card">Aria</h2>
+    </a>
+    <a href="/pages/poudlard.html" class="link-card">
+      <h2 class="hogwards-icon card">Poudlard</h2>
+    </a>
+    <a href="/pages/pathfinder.html" class="link-card">
+      <h2 class="pathfinder-icon card">Pathfinder</h2>
+    </a>
+  </nav>
 
   <script src="/program/app.js" type="module"></script>
 </body>
