--- a/pages/stats-personnage.html
+++ b/pages/stats-personnage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dices Tracker - Poudlard</title>
   <link rel="stylesheet" href="/style.css">
-  <link rel="shortcut icon" href="/images/dice-icon.jpg" type="image/jpg">
+  <link rel="shortcut icon" href="/images/dice-icon.png" type="image/png">
 </head>
 <body>
   <header class="page-header">
