--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dices Tracker</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="/images/dice-icon.jpg" type="image/jpg">
+  <link rel="shortcut icon" href="/images/dice-icon.png" type="image/png">
 </head>
 <body>
   <h1 class="home-title">Les stats des campagnes de JDR</h1>
