refactorisation + ajout navbar

--- a/pages/aria.html
+++ b/pages/aria.html
@@ -9,7 +9,15 @@
 </head>
 <body id="aria-page">
   <header class="page-header">
-    <h1 class="aria-icon title">Aria</h1>
+    <section class="aria-icon nav-section">
+      <nav class="navbar">
+        <a href="/index.html" class="nav-item aria-hover">Accueil</a>
+        <a href="/pages/aria.html" class="nav-item aria-hover">Aria</a>
+        <a href="/pages/poudlard.html" class="nav-item aria-hover">Poudlard</a>
+        <a href="/pages/pathfinder.html" class="nav-item aria-hover">Pathfinder</a>
+      </nav>
+      <h1 class="title">Aria</h1>
+    </section>
     <section class="pj-recap" id="aria-recap-section">
       <!--Génération de la liste des personnages-->
     </section>
