--- a/pages/pathfinder.html
+++ b/pages/pathfinder.html
@@ -9,7 +9,15 @@
 </head>
 <body id="pathfinder-page">
   <header class="page-header">
-    <h1 class="pathfinder-icon title">Pathfinder</h1>
+    <section class="nav-section pathfinder-icon">
+      <nav class="navbar">
+        <a href="/index.html" class="nav-item pathfinder-hover">Accueil</a>
+        <a href="/pages/aria.html" class="nav-item pathfinder-hover">Aria</a>
+        <a href="/pages/poudlard.html" class="nav-item pathfinder-hover">Poudlard</a>
+        <a href="/pages/pathfinder.html" class="nav-item pathfinder-hover">Pathfinder</a>
+      </nav>
+      <h1 class="title">Pathfinder</h1>
+    </section>
     <section class="pj-recap" id="pathfinder-recap-section">
       <!--Génération de la liste des personnages-->
     </section>
