--- a/pages/poudlard.html
+++ b/pages/poudlard.html
@@ -9,7 +9,15 @@
 </head>
 <body id="hogwards-page">
   <header class="page-header">
-    <h1 class="hogwards-icon title">Poudlard</h1>
+    <section class="hogwards-icon nav-section">
+      <nav class="navbar">
+        <a href="/index.html" class="nav-item hogwards-hover">Accueil</a>
+        <a href="/pages/aria.html" class="nav-item hogwards-hover">Aria</a>
+        <a href="/pages/poudlard.html" class="nav-item hogwards-hover">Poudlard</a>
+        <a href="/pages/pathfinder.html" class="nav-item hogwards-hover">Pathfinder</a>
+      </nav>
+      <h1 class="title">Poudlard</h1>
+    </section>
     <section class="pj-recap" id="hogwards-recap-section">
       <!--Génération de la liste des personnages-->
     </section>
