--- a/pages/stats-personnage.html
+++ b/pages/stats-personnage.html
@@ -9,6 +9,12 @@
 </head>
 <body>
   <header class="page-header">
+    <nav class="navbar">
+      <a href="/index.html" class="nav-item">Accueil</a>
+      <a href="/pages/aria.html" class="nav-item">Aria</a>
+      <a href="/pages/poudlard.html" class="nav-item">Poudlard</a>
+      <a href="/pages/pathfinder.html" class="nav-item">Pathfinder</a>
+    </nav>
     <h1 class="title" id="personnage-name"></h1>
     <a href="/index.html" class="link-button">Retour à l'accueil</a>
   </header>
