style/Pages JDR/modifications pour mobile en tenant compte du landscape pour le scroll

--- a/pages/pathfinder.html
+++ b/pages/pathfinder.html
@@ -18,17 +18,18 @@
       </nav>
       <h1 class="title">Pathfinder</h1>
     </section>
+  </header>
+
+  <main class="main-body-page">
     <section class="pj-recap" id="pathfinder-recap-section">
       <!--Génération de la liste des personnages-->
     </section>
-  </header>
 
-  <div class="main-body-page">
     <h2 id="nb-games">Nombre de parties : </h2>
-    <main class="stats-section" id="pathfinder-stats-section">
+    <section class="stats-section" id="pathfinder-stats-section">
       <!-- Génération des parties -->
-    </main>
-  </div>
+    </section>
+  </main>
 
   <script src="/program/app.js" type="module"></script>
 </body>
