--- a/pages/poudlard.html
+++ b/pages/poudlard.html
@@ -18,16 +18,17 @@
       </nav>
       <h1 class="title">Poudlard</h1>
     </section>
-    <section class="pj-recap" id="hogwards-recap-section">
-      <!--Génération de la liste des personnages-->
-    </section>
   </header>
 
   <main class="main-body-page">
+    <section class="pj-recap" id="hogwards-recap-section">
+      <!--Génération de la liste des personnages-->
+    </section>
+    
     <h2 id="nb-games">Nombre de parties : </h2>
-    <div class="stats-section" id="hogwards-stats-section">
+    <section class="stats-section" id="hogwards-stats-section">
       <!-- Génération des parties -->
-    </div>
+    </section>
   </main>
 
   <script src="/program/app.js" type="module"></script>
