mise à jour du front avec la nouvelle disposition json

--- a/pages/poudlard.html
+++ b/pages/poudlard.html
@@ -7,26 +7,26 @@
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" href="/images/dice-icon.png" type="image/png">
 </head>
-<body id="hogwards-page">
+<body id="poudlard-page">
   <header class="page-header">
-    <section class="hogwards-icon nav-section">
+    <section class="poudlard-icon nav-section">
       <nav class="navbar">
-        <a href="/index.html" class="nav-item hogwards-hover">Accueil</a>
-        <a href="/pages/aria.html" class="nav-item hogwards-hover">Aria</a>
-        <a href="/pages/poudlard.html" class="nav-item hogwards-hover">Poudlard</a>
-        <a href="/pages/pathfinder.html" class="nav-item hogwards-hover">Pathfinder</a>
+        <a href="/index.html" class="nav-item poudlard-hover">Accueil</a>
+        <a href="/pages/aria.html" class="nav-item poudlard-hover">Aria</a>
+        <a href="/pages/poudlard.html" class="nav-item poudlard-hover">Poudlard</a>
+        <a href="/pages/pathfinder.html" class="nav-item poudlard-hover">Pathfinder</a>
       </nav>
       <h1 class="title">Poudlard</h1>
     </section>
   </header>
 
   <main class="main-body-page">
-    <section class="pj-recap" id="hogwards-recap-section">
+    <section class="pj-recap" id="poudlard-recap-section">
       <!--Génération de la liste des personnages-->
     </section>
     
     <h2 id="nb-games">Nombre de parties : </h2>
-    <section class="stats-section" id="hogwards-stats-section">
+    <section class="stats-section" id="poudlard-stats-section">
       <!-- Génération des parties -->
     </section>
   </main>
