fix/modification classe poudlard

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </a>
 
   <a href="/pages/poudlard.html" class="link-card">
-    <h2 class="hogwards-icon card">Poudlard</h2>
+    <h2 class="poudlard-icon card">Poudlard</h2>
   </a>
 
   <a href="/pages/pathfinder.html" class="link-card">
