feat(golden sun): create page for this jdr and update program

--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
   <a href="/pages/pathfinder.html" class="link-card">
     <h2 class="pathfinder-icon card">Pathfinder</h2>
   </a>
+
+  <a href="/pages/goldensun.html" class="link-card">
+    <h2 class="goldensun-icon card">Golden Sun</h2>
+  </a>
 </body>
 </html>
