--- a/pages/goldensun.html
+++ b/pages/goldensun.html
@@ -3,33 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dices Tracker - Aria</title>
+  <title>Dices Tracker - Golden Sun</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" href="/images/dice-icon.png" type="image/png">
 </head>
-<body id="aria-page">
+<body id="goldensun-page">
   <header class="page-header">
-    <section class="aria-icon nav-section">
+    <section class="nav-section goldensun-icon">
       <nav class="navbar">
-        <a href="/index.html" class="nav-item aria-hover">Accueil</a>
-        <a href="/pages/aria.html" class="nav-item aria-hover">Aria</a>
-        <a href="/pages/poudlard.html" class="nav-item aria-hover">Poudlard</a>
-        <a href="/pages/pathfinder.html" class="nav-item aria-hover">Pathfinder</a>
+        <a href="/index.html" class="nav-item goldensun-hover">Accueil</a>
+        <a href="/pages/aria.html" class="nav-item goldensun-hover">Aria</a>
+        <a href="/pages/poudlard.html" class="nav-item goldensun-hover">Poudlard</a>
+        <a href="/pages/pathfinder.html" class="nav-item goldensun-hover">Pathfinder</a>
         <a href="/pages/goldensun.html" class="nav-item goldensun-hover">Golden Sun</a>
       </nav>
-      <h1 class="title">Aria</h1>
+      <h1 class="title">Golden Sun</h1>
     </section>
   </header>
 
   <main class="main-body-page">
-    <section class="pj-recap" id="aria-recap-section">
+    <section class="pj-recap" id="goldensun-recap-section">
       <!--Génération de la liste des personnages-->
     </section>
-    
+
     <h2 id="nb-games">Nombre de parties : </h2>
-    <div class="stats-section" id="aria-stats-section">
+    <section class="stats-section" id="goldensun-stats-section">
       <!-- Génération des parties -->
-    </div>
+    </section>
   </main>
 
   <script src="/program/app.js" type="module"></script>
