--- a/pages/pathfinder.html
+++ b/pages/pathfinder.html
@@ -15,6 +15,7 @@
         <a href="/pages/aria.html" class="nav-item pathfinder-hover">Aria</a>
         <a href="/pages/poudlard.html" class="nav-item pathfinder-hover">Poudlard</a>
         <a href="/pages/pathfinder.html" class="nav-item pathfinder-hover">Pathfinder</a>
+        <a href="/pages/goldensun.html" class="nav-item goldensun-hover">Golden Sun</a>
       </nav>
       <h1 class="title">Pathfinder</h1>
     </section>
