--- a/pages/poudlard.html
+++ b/pages/poudlard.html
@@ -15,7 +15,7 @@
         <a href="/pages/aria.html" class="nav-item poudlard-hover">Aria</a>
         <a href="/pages/poudlard.html" class="nav-item poudlard-hover">Poudlard</a>
         <a href="/pages/pathfinder.html" class="nav-item poudlard-hover">Pathfinder</a>
-        <a href="/pages/goldensun.html" class="nav-item goldensun-hover">Golden Sun</a>
+        <a href="/pages/goldensun.html" class="nav-item poudlard-hover">Golden Sun</a>
       </nav>
       <h1 class="title">Poudlard</h1>
     </section>
