fix responsive design mobile

--- a/pages/goldensun.html
+++ b/pages/goldensun.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dices Tracker - Golden Sun</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/style/style.css">
   <link rel="shortcut icon" href="/images/dice-icon.png" type="image/png">
 </head>
 <body id="goldensun-page">
